# mcp-ddd

./: .gitignore  README.md  pyproject.toml  weather_alerts.json  weather_data.json
blog/: blog_post.ipynb  blog_post.md  convert_blog_to_md.sh
env/: azure.env  azure.env.example
src/: chat.py  run_weather_service.py
src/client/: prompt_aware_client.py  resource_selector_client.py  simple_client.py
src/client/providers/: anthropic.py  azure_openai.py  base.py
src/servers/simple_weather/: weather.py
src/servers/weather_service/application/: mcp_server.py
src/servers/weather_service/domain/: models.py
src/servers/weather_service/domain/repository/: interfaces.py  repositories.py
src/servers/weather_service/domain/service/: interfaces.py  services.py
src/servers/weather_service/infrastructure/: adaptors.py  application.py  repositories.py
